resources/sass/_blog.scss
* {
    box-sizing: border-box;
    scroll-behavior: smooth;
}

html,
body {
    height: 100%;
}

body {
    display: flex;
    flex-direction: column;
}

.blog-content {
    flex: 1 0 auto;
}

.blog-footer {
    flex-shrink: 0;
    // // width: 100%;
    height: 3.5rem;
    line-height: 3.5rem;
    text-align: center;
}
.img-fit {
    width: 100vw;
    height: 50vh;
    object-fit: cover;
}

.hero-image {
    width: 100vw;
    height: 100vh;
    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
        url("/img/landing.jpeg");
    // background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
    //     url(" {{ asset('/img/landing.jpeg') }} ");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
}

.hero-text {
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
}

i {
    margin-top: 0.2em;
}

